# code-lifetime

./: .gitignore  CITATION.cff  Makefile  README.md  daglp.1  daglp.cpp  daglp.rs  difflog.sh  git-hot  git-hot.1  lifetime.pl  lifetime.py  pyproject.toml  runtest.sh  setup.py  sync-test-branches.sh  test_lifetime.py  tokenize.pl
.github/workflows/: ci.yml
churn.ok/: a  another file name with "quotes", spaces ελληνικά  b  c  d  diff  e  hello.c  hello.h
code-lifetime-test-branch.git/: config
code-lifetime-test-branch.git/objects/pack/: pack-8959441b745a4a9307bdd6f00a051fcbb5b23635.idx  pack-8959441b745a4a9307bdd6f00a051fcbb5b23635.pack  pack-8959441b745a4a9307bdd6f00a051fcbb5b23635.rev
code-lifetime-test.git/: config  packed-refs
code-lifetime-test.git/objects/pack/: pack-2280781a24aa90d0de6bf5725e899768c5c2ffd5.idx  pack-2280781a24aa90d0de6bf5725e899768c5c2ffd5.pack
fixtures/: line-contents.out  metrics.out  tokens.out
fixtures/churn.ok/: a  b  e
fixtures/code-lifetime-test-branch.git/: config  packed-refs
fixtures/code-lifetime-test.git/: config
fixtures/code-lifetime-test.git/objects/pack/: pack-2280781a24aa90d0de6bf5725e899768c5c2ffd5.rev
src/git_hot/: __init__.py  __main__.py  daglp.rs  lifetime.py
