[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-hot"
version = "0.3"
description = "Git extension for reporting source code line lifetime and churn"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Diomidis Spinellis" }]
keywords = ["git", "churn", "software-evolution", "repository-mining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/dspinellis/code-lifetime"
Issues = "https://github.com/dspinellis/code-lifetime/issues"

[dependency-groups]
dev = [
    "build>=1.2",
    "cibuildwheel>=2.21",
    "ruff>=0.5",
]

[project.scripts]
git-hot = "git_hot.lifetime:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
git_hot = ["daglp.rs"]

[tool.setuptools.data-files]
"share/man/man1" = ["git-hot.1"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "fixtures",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"lifetime.py" = ["F401", "F403"]

[tool.cibuildwheel]
build = "cp310-*"
skip = "*-musllinux_*"
test-command = "git-hot --help && python -c \"import subprocess; subprocess.run(['daglp'], input=b'', check=True)\""

[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.pytest.ini_options]
testpaths = ["test_lifetime.py"]
